@@ -1,3 +1,3 @@
 explain X::~C()
-           ^
-12: syntax error: "~": cast or declaration expected
+        ^
+9: error: matching class name after '~' expected
